# fitgirl-browser

./: .env.example  .gitignore  ARCHITECTURE_ISSUES.md  BUILD.md  CLEANUP_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.backup3  QUICKSTART.md  README.md  RELEASE_NOTES_v2.0.0.md  STRUCTURE.txt  build-client.ps1  build-windows-client.sh  create-release.sh  docker-compose.example.yml  docker-compose.yml  dockerignore  gitignore  run.bat
.claude/: settings.local.json
client-agent/: Cargo.toml  README.md
client-agent/src/: client_id.rs  config.rs  download_processor.rs  downloader.rs  extractor.rs  local_server.rs  main.rs  main_gui.rs  realdebrid.rs  server_client.rs  system_info.rs
fitgirl-browser-app/: run.bat
fitgirl-browser-app/frontend/: app.js
frontend/: app.js  index.html  login.html
releases/: README.md
src/: client_downloads.rs  db.rs  download_manager.rs  downloader.rs  extractor.rs.backup2  installation_assistant.rs  installation_checker.rs  installation_monitor.rs  main.rs  md5_validator.rs  rawg.rs  realdebrid.rs  scraper.rs  system_info.rs
src/scrapers/: fitgirl.rs  mod.rs  registry.rs  steamrip.rs  utils.rs
