[package]
name = "repack-client"
version = "1.0.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for server communication and file downloads
reqwest = { version = "0.11", features = ["json", "stream"] }

# HTTP server for local browser communication
warp = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL encoding/decoding
urlencoding = "2.1"

# UUID for client ID
uuid = { version = "1.0", features = ["v4", "serde"] }

# System information
sysinfo = "0.30"

# Archive extraction
zip = "0.6"
sevenz-rust = "0.5"

# File operations
walkdir = "2.4"

# Progress tracking
indicatif = "0.17"

# MD5 hashing
md5 = "0.7"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "wincon", "shellapi", "processthreadsapi",
    "sysinfoapi", "memoryapi", "fileapi", "winbase"
] }
winreg = "0.52"

# System tray
tray-item = "0.10"

# GUI
eframe = "0.29"
rfd = "0.15"

# Configuration file
toml = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"

# Date/time
chrono = "0.4"

# Hostname and directories
hostname = "0.3"
dirs = "5.0"

[[bin]]
name = "repack-client"
path = "src/main.rs"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
